# harvux

./: .gitignore  Cargo.toml  README.md  build.rs  com.github.samsonasu.Harvux.yml
build-aux/: flatpak-cargo-generator.sh
data/: com.github.samsonasu.Harvux.desktop  com.github.samsonasu.Harvux.metainfo.xml
resources/: preferences.ui  resources.gresource.xml  timer_page.ui  window.ui
src/: credentials.rs  main.rs  tray.rs
src/api/: client.rs  harvest.rs  mod.rs  models.rs
src/application/: imp.rs  mod.rs
src/preferences/: imp.rs  mod.rs
src/widgets/: mod.rs
src/widgets/timer_page/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
